// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmbeddingShowcaseView — W0-03 DOM snapshot baseline > renders the pinned intro fixture with the expected readonly canvas and offline disclosure 1`] = `
<div>
  <div
    class="flex h-full w-full flex-col gap-3"
    data-testid="embedding-showcase-view"
  >
    <div
      class="min-h-0 flex-1"
      data-testid="embedding-scatter"
    >
      <div
        aria-label="Embedding scatter plot"
        class="min-h-0 flex-1 w-full bg-transparent"
        role="application"
      />
    </div>
    <div
      class="sr-only"
    >
      <button
        aria-pressed="false"
        data-testid="embedding-point-Amazon"
        type="button"
      >
        Amazon
      </button>
      <button
        aria-pressed="false"
        data-testid="embedding-point-Apple"
        type="button"
      >
        Apple
      </button>
      <button
        aria-pressed="false"
        data-testid="embedding-point-Microsoft"
        type="button"
      >
        Microsoft
      </button>
    </div>
    <div
      class="rounded-md border border-border bg-card/60 px-3 py-2 text-xs text-muted-foreground"
      data-testid="embedding-offline-disclosure"
    >
      Sample coordinates frozen from Semantica visualization fixture; no live embedding provider used.
    </div>
  </div>
</div>
`;

exports[`KgShowcaseView — W0-03 DOM snapshot baseline > renders the pinned intro fixture with the expected testids and summary 1`] = `
<div>
  <div
    class="flex h-full w-full flex-col gap-3"
    data-testid="kg-showcase-view"
  >
    <div
      aria-label="Knowledge graph showcase"
      class="min-h-0 flex-1 w-full bg-transparent"
      role="application"
    />
  </div>
</div>
`;

exports[`OntologyShowcaseView — W0-03 DOM snapshot baseline > renders the pinned intro fixture with the expected hierarchy canvas testids 1`] = `
<div>
  <div
    class="flex h-full w-full flex-col gap-3"
    data-testid="ontology-showcase-view"
  >
    <div
      aria-label="Ontology hierarchy showcase"
      class="min-h-0 flex-1 w-full bg-transparent"
      role="application"
    />
    <div
      class="sr-only"
      data-testid="ontology-tree"
    >
      <button
        aria-pressed="false"
        data-testid="ontology-class-Entity"
        type="button"
      >
        Entity
      </button>
      <button
        aria-pressed="false"
        data-testid="ontology-class-Organization"
        type="button"
      >
        Organization
      </button>
      <button
        aria-pressed="false"
        data-testid="ontology-class-Person"
        type="button"
      >
        Person
      </button>
      <button
        aria-pressed="false"
        data-testid="ontology-class-Relationship"
        type="button"
      >
        Relationship
      </button>
      <button
        aria-pressed="false"
        data-testid="ontology-class-CEO_of"
        type="button"
      >
        CEO_of
      </button>
    </div>
  </div>
</div>
`;

exports[`SemanticNetworkShowcaseView — W0-03 DOM snapshot baseline > renders the pinned intro fixture with the expected readonly canvas surface 1`] = `
<div>
  <div
    class="flex h-full w-full flex-col gap-3"
    data-testid="semantic-network-showcase-view"
  >
    <div
      aria-label="Semantic network showcase"
      class="min-h-0 flex-1 w-full bg-transparent"
      role="application"
    />
  </div>
</div>
`;
